fixup! BB 32308: Use direct browser sizing for letterboxing.
BB 44041: Make dialog overlays cover the correct area without fixed positioning.

--- a/toolkit/components/resistfingerprinting/content/letterboxing.css
+++ b/toolkit/components/resistfingerprinting/content/letterboxing.css
@@ -42,12 +42,7 @@
 
 :root:not([inDOMFullscreen]) .letterboxing.letterboxing-ready .browserContainer:not(.responsive-mode)
   > .browserStack:not(.exclude-letterboxing) {
-
   place-content: start center;
-
-  & > .dialogStack {
-    position: fixed;
-  }
 }
 
 .browserDecorator {
